# teams_chatbot

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.aws/: task-definition.json
.github/workflows/: actions.yaml
bot/interactors/: agent_graph.py  echo_agent.py  llm_agent.py  reminder_agent.py
bot/routers/: agent_router.py
bot/services/: llm.py  reminder_service.py  teams.py
bot/utils/: schema.py
