[tool.poetry]
name = "teams-chatbot"
version = "0.1.0"
description = "A Microsoft Teams chatbot powered by LangGraph and LangChain"
authors = ["ASMA <asma.liaquat22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
botbuilder-core = "4.17.0"
botbuilder-schema = "4.17.0"
botbuilder-integration-aiohttp = "4.17.0"
fastapi = "0.116.1"
uvicorn = "0.35.0"
langchain = "0.3.26"
langchain-mistralai = "0.2.11"
langgraph = "0.5.4"
pydantic = "2.11.7"
loguru = "0.7.3"
httpx = "0.28.1"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.12.14"
aiosignal = "1.4.0"
aiosqlite = "0.21.0"
annotated-types = "0.7.0"
anyio = "4.9.0"
apscheduler = "3.11.0"
attrs = "25.3.0"
azure-core = "1.35.0"
backports-tarfile = "1.2.0"
black = "23.12.1"
botframework-connector = "4.17.0"
botframework-streaming = "4.17.0"
build = "1.2.2.post1"
cachecontrol = "0.14.3"
certifi = "2025.7.14"
cffi = "1.17.1"
charset-normalizer = "3.4.2"
cleo = "2.1.0"
click = "8.2.1"
colorama = "0.4.6"
crashtest = "0.4.1"
cryptography = "45.0.5"
dataclasses-json = "0.6.7"
distlib = "0.4.0"
distro = "1.9.0"
dulwich = "0.22.8"
fastjsonschema = "2.21.1"
filelock = "3.18.0"
findpython = "0.6.3"
flake8 = "6.1.0"
frozenlist = "1.7.0"
fsspec = "2025.7.0"
greenlet = "3.2.3"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx-sse = "0.4.1"
huggingface-hub = "0.33.4"
idna = "3.10"
importlib-metadata = "8.7.0"
iniconfig = "2.1.0"
installer = "0.7.0"
isodate = "0.7.2"
isort = "5.13.2"
jaraco-classes = "3.4.0"
jaraco-context = "6.0.1"
jaraco-functools = "4.2.1"
jiter = "0.10.0"
jsonpatch = "1.33"
jsonpickle = "1.4.2"
jsonpointer = "3.0.0"
keyring = "25.6.0"
langchain-community = "0.3.27"
langchain-core = "0.3.71"
langchain-openai = "0.3.28"
langchain-text-splitters = "0.3.8"
langgraph-checkpoint = "2.1.1"
langgraph-checkpoint-sqlite = "2.0.10"
langgraph-prebuilt = "0.5.2"
langgraph-sdk = "0.1.74"
langsmith = "0.4.8"
marshmallow = "3.26.1"
mccabe = "0.7.0"
more-itertools = "10.7.0"
msal = "1.32.3"
msgpack = "1.1.1"
msrest = "0.7.1"
multidict = "6.6.3"
mypy-extensions = "1.1.0"
numpy = "2.3.1"
oauthlib = "3.3.1"
openai = "1.97.1"
orjson = "3.11.0"
ormsgpack = "1.10.0"
packaging = "25.0"
pathspec = "0.12.1"
pbs-installer = "2025.7.12"
pkginfo = "1.12.1.2"
platformdirs = "4.3.8"
pluggy = "1.6.0"
poetry = "2.1.3"
poetry-core = "2.1.3"
propcache = "0.3.2"
pycodestyle = "2.11.1"
pycparser = "2.22"
pydantic-settings = "2.10.1"
pydantic-core = "2.33.2"
pyflakes = "3.1.0"
pygments = "2.19.2"
pyjwt = "2.10.1"
pyproject-hooks = "1.2.0"
pytest = "8.4.1"
pytest-asyncio = "0.20.3"
python-dotenv = "1.1.1"
pywin32-ctypes = "0.2.3"
pyyaml = "6.0.2"
rapidfuzz = "3.13.0"
regex = "2024.11.6"
requests = "2.32.4"
requests-oauthlib = "2.0.0"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
six = "1.17.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.41"
sqlite-vec = "0.1.6"
starlette = "0.47.2"
tenacity = "9.1.2"
tiktoken = "0.9.0"
tokenizers = "0.21.2"
tomlkit = "0.13.3"
tqdm = "4.67.1"
trove-classifiers = "2025.5.9.12"
typing-inspect = "0.9.0"
typing-inspection = "0.4.1"
typing-extensions = "4.14.1"
tzdata = "2025.2"
tzlocal = "5.3.1"
urllib3 = "2.5.0"
virtualenv = "20.31.2"
win32-setctime = "1.2.0"
xxhash = "3.5.0"
yarl = "1.20.1"
zipp = "3.23.0"
zstandard = "0.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.20.3"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
